yaml-gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-frontend-service
            port:
              number: 80
      - path: /wordpress
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress
            port:
              number: 8080
